// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Campaign actions createCampaign should fetch the integration and execute onUpdateSuccess when creating a campaign successfully 1`] = `
Array [
  Object {
    "resp": Object {
      "id": 1,
      "type": "smooch_inside",
    },
    "type": "UPDATE_INTEGRATION_SUCCESS",
  },
  Object {
    "type": "FETCH_INTEGRATIONS_START",
  },
  Object {
    "payload": Object {
      "allowHTML": false,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 3000,
      "dismissible": true,
      "id": null,
      "message": "Integration successfully updated.",
      "position": "top-right",
      "status": "success",
      "style": "alert",
    },
    "type": "reapop/upsertNotification",
  },
  Object {
    "id": 1,
    "type": "FETCH_INTEGRATION_START",
  },
  Object {
    "resp": Object {
      "data": Array [],
    },
    "type": "FETCH_INTEGRATIONS_SUCCESS",
  },
  Object {
    "integration": Object {
      "data": Object {},
    },
    "type": "FETCH_INTEGRATION_SUCCESS",
  },
]
`;

exports[`Campaign actions createCampaign should notify an error when creating a campaign fails 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 400],
    "type": "UPDATE_INTEGRATION_ERROR",
    "verbose": true,
  },
]
`;

exports[`Campaign actions deleteCampaign should fetch the integration and execute onUpdateSuccess when deleting a campaign successfully 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 404],
    "type": "UPDATE_INTEGRATION_ERROR",
    "verbose": true,
  },
]
`;

exports[`Campaign actions deleteCampaign should notify an error when deleting a campaign fails 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 404],
    "type": "UPDATE_INTEGRATION_ERROR",
    "verbose": true,
  },
]
`;

exports[`Campaign actions updateCampaign should fetch the integration and execute onUpdateSuccess when updating a campaign successfully 1`] = `
Array [
  Object {
    "resp": Object {
      "id": 1,
      "type": "smooch_inside",
    },
    "type": "UPDATE_INTEGRATION_SUCCESS",
  },
  Object {
    "type": "FETCH_INTEGRATIONS_START",
  },
  Object {
    "payload": Object {
      "allowHTML": false,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 3000,
      "dismissible": true,
      "id": null,
      "message": "Integration successfully updated.",
      "position": "top-right",
      "status": "success",
      "style": "alert",
    },
    "type": "reapop/upsertNotification",
  },
  Object {
    "id": 1,
    "type": "FETCH_INTEGRATION_START",
  },
  Object {
    "resp": Object {
      "data": Array [],
    },
    "type": "FETCH_INTEGRATIONS_SUCCESS",
  },
  Object {
    "integration": Object {
      "data": Object {},
    },
    "type": "FETCH_INTEGRATION_SUCCESS",
  },
]
`;

exports[`Campaign actions updateCampaign should notify an error when updating a campaign fails 1`] = `
Array [
  Object {
    "error": [Error: Request failed with status code 400],
    "type": "UPDATE_INTEGRATION_ERROR",
    "verbose": true,
  },
]
`;
